added author summary

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -136,7 +136,13 @@ Melanie I. Stefan\textsuperscript{2},
 \section*{Abstract}
 While women are generally underrepresented in STEM fields, there are noticeable differences between fields. For instance, the gender ratio in biology is more balanced than in computer science. We were interested in how this difference is reflected in the interdisciplinary field of computational/quantitative biology. To this end, we examined the proportion of female authors in publications from the PubMed and arXiv databases. There are fewer female authors on research papers in computational biology, as compared to biology in general. This is true across authorship position, year, and journal impact factor. A comparison with arXiv shows that quantitative biology papers have a higher ratio of female authors than computer science papers, placing computational biology in between its two parent fields in terms of gender representation. Both in biology and in computational biology, a female last author increases the probability of other authors on the paper being female, pointing to a potential role of female PIs in influencing the gender balance.
 
-\section*{Introduction}
+\section*{Author Summary}
+
+There are fewer women than men working in Science, Technology, Engineering and Mathematics (STEM). However, some fields within STEM are more gender-balanced than others. For instance, biology has a relatively high proportion of women, whereas there are few women in computer science. But what about computational biology? As an interdisciplinary STEM field, would its gender balance be close to one of its ``parent'' fields, or in between the two? To investigate this question, we examined authorship data from databases of scholarly publications in biology, computational biology, and computer science. We found that computational biology lies in between computer science and biology, as far as female representation goes. This is independent of other factors, e.g. year of publication. This suggests that computational biology might provide an environment that is more conducive to female participation that other areas of computer science. Across all three fields, we also found that if the last author on a publication - usually the person leading the study - is a women, then there will also be more women in other authorship positions. This suggests that having women in leadership positions might be beneficial for overall gender balance, though our data do not allow us to uncover the underlying mechanism.
+
+
+
+\section{Introduction}
 There is ample literature on the underrepresentation of women in STEM fields and the biases contributing to it. Those biases, though often subtle, are pervasive in several ways: they are often held and perpetuated by both men and women, and they are apparent across all aspects of academic and scientific practice. Undergraduate students show bias in favor of men both when rating their peers\cite{Grunspan2016} and their professors \cite{MacNell2014}. Professors, in turn, are more likely to respond to e-mail from prospective students who are male \cite{Milkman2015}. They also show gender bias when hiring staff and deciding on a starting salary \cite{Moss-Racusin2012}.
 
 When looking at research output in the form of publication and impact, the story is complex: Women tend to publish less than men \cite{Lariviere2013}, are underrepresented in the more prestigious first and last author positions, and publish fewer single-author papers \cite{West2013}. In mathematics, women tend to publish in lower-impact journals \cite{Mihaljevic-Brandt2016}, while in engineering, women publish in journals with higher impact factors \cite{Ghiasi2015}. In general, however, articles authored by women are cited less frequently than articles authoreed by men \cite{Lariviere2013,Ghiasi2016}, which might in part be due to men citing their own work more often than women do \cite{King2016}. Inferring bias in these studies is difficult, since the cause of the disparity between male and female authorship cannot be readily determined. At the same time, when stories of scientific discoveries are told, gender biases are readily identified: Work by female scientists is more likely to be attributed to a male colleague \cite{Rossiter1993}, and biographies of successful female scientists perpetuate gender stereotypes \cite{Fara2013}. Finally, the way in which evidence for gender bias is received is in itself biased:  Male scientists are less likely to accept studies that point to the existence of gender bias than are their female colleagues \cite{Handley2015}.
