--- a/manuscript.tex
+++ b/manuscript.tex
@@ -115,7 +115,7 @@
 % Title must be 250 characters or less.
 \begin{flushleft}
 {\Large
-\textbf\newline{Gender disparity in computational biology research publications}
+\textbf\newline{Women are Underrepresented in Computational Biology: an analysis of the scholarly literature in biology, computer science and computational biologys}
 }
 \newline
 % Insert author names, affiliations and corresponding author email (do not include titles, positions, or degrees).
@@ -136,10 +136,13 @@ Melanie I. Stefan\textsuperscript{2},
 \section*{Abstract}
 While women are generally underrepresented in STEM fields, there are noticeable differences between fields. For instance, the gender ratio in biology is more balanced than in computer science. We were interested in how this difference is reflected in the interdisciplinary field of computational/quantitative biology. To this end, we examined the proportion of female authors in publications from the PubMed and arXiv databases. There are fewer female authors on research papers in computational biology, as compared to biology in general. This is true across authorship position, year, and journal impact factor. A comparison with arXiv shows that quantitative biology papers have a higher ratio of female authors than computer science papers, placing computational biology in between its two parent fields in terms of gender representation. Both in biology and in computational biology, a female last author increases the probability of other authors on the paper being female, pointing to a potential role of female PIs in influencing the gender balance.
 
+\section*{Author Summary}
+TODO
+
 \section*{Introduction}
 There is ample literature on the underrepresentation of women in STEM fields and the biases contributing to it. Those biases, though often subtle, are pervasive in several ways: they are often held and perpetuated by both men and women, and they are apparent across all aspects of academic and scientific practice. Undergraduate students show bias in favor of men both when rating their peers\cite{Grunspan2016} and their professors \cite{MacNell2014}. Professors, in turn, are more likely to respond to e-mail from prospective students who are male \cite{Milkman2015}. They also show gender bias when hiring staff and deciding on a starting salary \cite{Moss-Racusin2012}.
 
-When looking at research output in the form of publication and impact, the story is complex: Women tend to publish less than men \cite{Lariviere2013}, are underrepresented in the more prestigious first and last author positions, and publish fewer single-author papers \cite{West2013}. In mathematics, women tend to publish in lower-impact journals \cite{Mihaljevic-Brandt2016}, while in engineering, women publish in journals with higher impact factors \cite{Ghiasi2015}. In general, however, articles authored by women are cited less frequently than articles authoreed by men \cite{Lariviere2013,Ghiasi2016}, which might in part be due to men citing their own work more often than women do \cite{King2016}. Inferring bias in these studies is difficult, since the cause of the disparity between male and female authorship cannot be readily determined. At the same time, when stories of scientific discoveries are told, gender biases are readily identified: Work by female scientists is more likely to be attributed to a male colleague \cite{Rossiter1993}, and biographies of successful female scientists perpetuate gender stereotypes \cite{Fara2013}. Finally, the way in which evidence for gender bias is received is in itself biased:  Male scientists are less likely to accept studies that point to the existence of gender bias than are their female colleagues \cite{Handley2015}.
+When looking at research output in the form of publication and impact, the story is complex: Women tend to publish less than men \cite{Lariviere2013}, are underrepresented in the more prestigious first and last author positions, and publish fewer single-author papers \cite{West2013}. In mathematics, women tend to publish in lower-impact journals \cite{Mihaljevic-Brandt2016}, while in engineering, women publish in journals with higher impact factors \cite{Ghiasi2015}. In general, however, articles authored by women are cited less frequently than articles authoreed by men \cite{Lariviere2013,Ghiasi2015}, which might in part be due to men citing their own work more often than women do \cite{King2016}. Inferring bias in these studies is difficult, since the cause of the disparity between male and female authorship cannot be readily determined. At the same time, when stories of scientific discoveries are told, gender biases are readily identified: Work by female scientists is more likely to be attributed to a male colleague \cite{Rossiter1993}, and biographies of successful female scientists perpetuate gender stereotypes \cite{Fara2013}. Finally, the way in which evidence for gender bias is received is in itself biased:  Male scientists are less likely to accept studies that point to the existence of gender bias than are their female colleagues \cite{Handley2015}.
 
 Although gender imbalance seems to be universal across all aspects of the scientific enterprise, there are also more nuanced effects. In particular, not all disciplines are equally affected. For instance, in the biosciences over half of PhD recipients are now women, while in computer science, it is less than 20\% \cite{NSF2015}. This raises an intriguing question, namely how do the effects of gender persist in interdisciplinary fields where the parent fields are discordant for female representation?
 
@@ -158,7 +161,7 @@ We began our investigation of the gender make-up in biology and computational bi
 
 \begin{figure}[!h]
   \caption{
-  A: Mean probability that an author in a given position is female for primary articles indexed in Pubmed with the MeSH term Biology (black) or Computational Biology (grey). The bio dataset is inclusive of papers in the comp dataset. Error bars represent 95\% confidence intervals. B: Mean probability that an author in a given position is female for primary articles indexed in Pubmed with the MeSH term Biology (black) or Computational Biology (grey). The bio dataset is inclusive of papers in the comp dataset. Error bars represent 95\% confidence intervals. C: Mean probability that an author is female for publications in a given year. Error bars represent 95\% confidence intervals. D: Mean probability that the first (F), second (S), penultimate (P) or other (O) author is female for publications where the last author is male ($P_{female}$ < 0.2) or female ($P_{female}$ > 0.8). Papers where the gender of the last author was uncertain or could not be determined were excluded. Error bars represent 95\% confidence intervals.}
+  A: Mean probability that an author in a given position is female for primary articles indexed in Pubmed with the MeSH term Biology (black) or Computational Biology (grey). The bio dataset is inclusive of papers in the comp dataset. Error bars represent 95\% confidence intervals. B: Mean probability that an author is female for publications in a given year. Error bars represent 95\% confidence intervals. C: Mean probability that the first (F), second (S), penultimate (P) or other (O) author is female for publications where the last author is male ($P_{female}$ < 0.2) or female ($P_{female}$ > 0.8). Papers where the gender of the last author was uncertain or could not be determined were excluded. Error bars represent 95\% confidence intervals.}
   \label{fig1}
 \end{figure}
 
